...
import { EstadoCarga } from '@/design-system/componentes/estado-carga'
import { useRouter } from 'expo-router'
import { useFichajeStore } from '@/lib/hooks/use-fichaje-store'
import { useConfiguracionFichajeStore } from '@/lib/hooks/use-configuracion-fichaje-store'
import PantallaFichajeDeshabilitado from '@/fichaje-jugador/_pasos/pantalla-fichaje-deshabilitado'
import PantallaIntro from '@/fichaje-jugador/_pasos/pantalla-intro'
import PantallaConfirmacion from '@/fichaje-jugador/_pasos/pantalla-confirmacion'
import PasoCodigoEquipo from '@/fichaje-jugador/_pasos/paso-codigo-equipo'
import PasoDatosJugador from '@/fichaje-jugador/_pasos/fichaje-nuevo/paso-datos-jugador'
import PasoFoto from '@/fichaje-jugador/_pasos/fichaje-nuevo/paso-foto'
import PasoFotosDni from '@/fichaje-jugador/_pasos/fichaje-nuevo/paso-fotos-dni'
import PasoAutorizacion from '@/fichaje-jugador/_pasos/fichaje-nuevo/paso-autorizacion'
import PasoDni from '@/fichaje-jugador/_pasos/fichaje-existente/paso-dni'
import { RUTAS } from '@/logica-compartida/constantes/rutas'

const MENSAJE_CONFIRMACION = 'Vas a recibir la confirmación de tu fichaje por parte de tu delegado.'

export default function FichajesScreen() {
...
